fixed layout bug mystic extra space in timeline component

--- a/src/pages/Homepage.style.scss
+++ b/src/pages/Homepage.style.scss
@@ -48,7 +48,7 @@
     justify-content: space-around;
     align-items: center;
     width: 100px;
-    margin-left: -59px;
+    margin-left: -49px;
     line-height: 1.5rem;
     z-index: 120;
     .title {
@@ -77,7 +77,7 @@
     position: absolute;
     top: 0;
     left: 50%;
-    margin-left: -0.5em;
+    // margin-left: -0.5em;
     background-color: transparent;
     border: 1px solid red;
     z-index: 100;
